[package]
name = "nes"
version = "0.1.0"
authors = ["Mitchell Cohen <mitch.cohen@me.com>"]
edition = "2018"

[lib]
name="nes"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "debugger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
wasm-bindgen = "0.2.50"
colored = "2.0"
rustasm6502 = "0.1.2"
ratatui = "0.24.0"
crossterm = "0.27.0"
sdl2 = "0.35.2"
