[package]
name = "nes"
version = "0.1.0"
authors = ["Mitchell Cohen <mitch.cohen@me.com>"]
edition = "2018"

[lib]
name = "nes"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[build]
rustflags = ["-C", "target-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
colored = "2.0"
rustasm6502 = "0.1.2"
ratatui = "0.24.0"
crossterm = "0.27.0"
sdl2 = "0.35.2"
clap = { version = "4.5.36", features = ["derive"] }
parking_lot = "0.12.1"
parking_lot_core = "0.9.9"
serialport = "4.2.2"
raw_tty = "0.1.0"
