[package]
name = "nes"
version = "0.1.0"
authors = ["Mitchell Cohen <mitch.cohen@me.com>"]
edition = "2024"

[lib]
name = "nes"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

# [build]
# rustflags = ["-C", "target-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["sdl", "libretro"]
sdl = ["dep:sdl2"]
libretro = ["dep:libretro-rs"]

[dependencies]
bitflags = "2.9.0"
rand = "0.9.0"
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
parking_lot = "0.12.1"
parking_lot_core = "0.9.9"
spin_sleep = "1.3.1"
sdl2 = { version = "0.37.0", optional = true }
# serialport = "4.2.2"
libretro-rs = { version = "0.1.3", optional = true }
thread-priority = "1.2.0"

# For miyoo (armhf): build without sdl feature

# [workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# pre-build = [
#     "dpkg --add-architecture $CROSS_DEB_ARCH",
#     "apt-get update && apt-get --assume-yes install libsdl2-dev:$CROSS_DEB_ARCH",
# ]
